--- a/frontend/src/pages/PlaceOrder/PlaceOrder.css
+++ b/frontend/src/pages/PlaceOrder/PlaceOrder.css
@@ -12,7 +12,7 @@
 .place-order-left .title{
     font-size: 30px;
     font-weight: 600px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 .place-order-left input{
     margin-bottom: 15px;
@@ -32,4 +32,10 @@
 }
 .place-order .cart-total button{
     margin-top: 30px;
+}
+
+@media (max-width: 570px) {
+    .place-order{
+        display: inline;        
+    }
 }
