--- a/frontend/src/components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/components/ExploreMenu/ExploreMenu.css
@@ -8,7 +8,8 @@
     font-weight: 500;
 }
 .explore-menu-text{
-    max-width: 60%;
+    text-align: justify;
+    font-size: 18px;
     color: #808080;
 }
 .explore-menu-list{
@@ -43,7 +44,7 @@
     border: none;
 }
 .explore-menu-list-item .active{
-    border: 4px solid tomato;
+    border: 4px solid #FFD700;
     padding: 2px;
 }
 
