--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -9,6 +9,9 @@
     padding-top: 80px;
     margin-top: 100px;
 }
+.foot-img{
+    margin-top: -40px;
+}
 .footer-content{
     width: 100%;
     display: grid;
@@ -41,7 +44,7 @@
     border: none;
 }
 
-@media (max-width: 750px){
+@media (max-width: 830px){
     .footer-content{
         display: flex;
         flex-direction: column;
