--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -6,7 +6,7 @@
 }
 
 .navbar .logo{
-    width: 150px;
+    width: 200px;
 }
 
 .navbar-menu{
@@ -27,7 +27,7 @@
     background-color: transparent;
     font-size: 16px;
     color: #49557e;
-    border: 1px solid tomato;
+    border: 1px solid #FFD700;
     padding: 10px 30px;
     border-radius: 50px;
     cursor: pointer;
@@ -55,7 +55,7 @@
     position: absolute;
     min-width: 10px;
     min-height: 10px;
-    background-color: tomato;
+    background-color: #FFD700;
     border-radius: 5px;
     top: -8px;
     right: -8px;
@@ -75,10 +75,10 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    background-color: #fff2ef;
+    background-color: rgb(250, 255, 160);
     padding: 12px 25px;
     border-radius: 4px;
-    border: 1px solid tomato;
+    border: 1px solid #FFD700;
     outline: 2px solid white;
     list-style: none;
 }
@@ -92,7 +92,7 @@
     width: 20px;
 }
 .nav-profile-dropdown li:hover{
-    color: tomato;
+    color: #FFD700;
 }
 
 
